test/testdata/classes/methods/init/duplicate_params_error.lox
// error: duplicate parameter x
// error: duplicate parameter y
class Foo {
  init(x, y, z, x, y) {}
}
